Bug 38328 - Find & replace dialogue doesn't open through Ctrl+H (former Ctrl+Alt+F) if cursor is in Find bar
Summary: Find & replace dialogue doesn't open through Ctrl+H (former Ctrl+Alt+F) if cu...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.4.0 release
Hardware: Other All
: low trivial
Assignee: Mike Kaganski
URL:
Whiteboard: target:6.3.0
Keywords:
: 45903 64341 119666 (view as bug list)
Depends on:
Blocks: Find-Search
  Show dependency treegraph
 
Reported: 2011-06-14 23:10 UTC by andis.lazdins
Modified: 2019-07-26 19:24 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description andis.lazdins 2011-06-14 23:10:11 UTC
When Ctrl+F is pressed to open Find bar, pressing of key combination left Ctrl+Alt+F opens File menu instead of Find&replace menu. Ctrl+Alt+F works if between those 2 manipulations cursor is pressed somewhere in text. Works in Calc and Writer.
Right Ctrl+Alt+F do not cause any reaction at any conditions. I suppose it should be noted somewhere in help/description.

By the way, is there reasonable way to close find bar using keyboard?
Comment 1 GerardF 2011-06-16 12:09:30 UTC
(In reply to comment #0)
> When Ctrl+F is pressed to open Find bar, pressing of key combination left
> Ctrl+Alt+F opens File menu instead of Find&replace menu. Ctrl+Alt+F works if
> between those 2 manipulations cursor is pressed somewhere in text. Works in
> Calc and Writer.

I confirm Ctrl+Alt+F works only if cursor in is in the text with Find bar opened.

> Right Ctrl+Alt+F do not cause any reaction at any conditions. I suppose it
> should be noted somewhere in help/description.

Right Ctrl+Alt+F works for me (same as Left key).
I'm running on Windows Vista. Which OS did you used ?

 
> By the way, is there reasonable way to close find bar using keyboard?

With the cursor in the Find bar, press Escape.
Comment 2 tester8 2011-06-16 14:09:47 UTC
Ubuntu 10.04.2 x86
LO 3.4

>When Ctrl+F is pressed to open Find bar, pressing of key combination left
>Ctrl+Alt+F opens File menu instead of Find&replace menu. Ctrl+Alt+F works if
>between those 2 manipulations cursor is pressed somewhere in text.
Reproduced. Ctrl+Alt+F does nothing if cursor in the find bar.


>Right Ctrl+Alt+F do not cause any reaction at any conditions.
NOT reproduced.
Comment 3 andis.lazdins 2011-06-16 21:46:40 UTC
> Right Ctrl+Alt+F works for me (same as Left key).
> I'm running on Windows Vista. Which OS did you used ?
> 
Ubuntu 10.10
> 
> > By the way, is there reasonable way to close find bar using keyboard?
> 
> With the cursor in the Find bar, press Escape.
Thank you for that!
Comment 4 Charles Brockman 2011-08-18 16:53:22 UTC
By the way, it is not possible to only Find using Match Case or Whole Words Only or any of the other options. Users must guess that they have to invoke the Find and Replace dialog even though they don't need the Replace function. That's not exactly intuitive. If I want to do a case-senstive Find I should be able to open the dialog with Control-F and select that option. As it is now, Control-F takes me to the Find toolbar which cannot be disabled.

[Tested in Windows XP, LibreOffice 3.4.2]
Comment 5 Cor Nouws 2011-09-14 14:32:37 UTC
Mwah, there may be so much that does not work when the find bar has the focus.
Is this really a bug?
Comment 6 Cor Nouws 2011-09-14 14:34:11 UTC
(In reply to comment #4)
> By the way, it is not possible to only Find using Match Case or Whole Words
> Only or any of the other options. Users must guess that they have to invoke the
etc.

Hi Charles,
The interaction of options set with the working find bar, already is mentioned in other issues.
Comment 7 Björn Michaelsen 2011-12-23 12:25:21 UTC Comment hidden (obsolete)
Comment 8 sasha.libreoffice 2012-01-27 03:52:24 UTC
reproduced this: if cursor placed in any toolbar, no keyboard short-cuts work
reproduced in LibO 3.6.0 master on Fedora 64 bit
Comment 9 Jorendc 2013-03-10 00:21:56 UTC
*** Bug 45903 has been marked as a duplicate of this bug. ***
Comment 10 A (Andy) 2014-10-02 08:34:51 UTC
reproducible with LO 4.3.2.2 (Win 8.1)

If the cursor placed in any toolbar, no shortcut key works.  But Ctrl+Alt+F is in my LO release no shortcut for the FIND & REPLACE dialog.  The shortcut for this dialog is Ctrl+H.
Comment 11 QA Administrators 2015-10-14 19:58:16 UTC Comment hidden (obsolete)
Comment 12 Cor Nouws 2015-10-14 20:24:32 UTC
still the case
Comment 13 Yousuf Philips (jay) (retired) 2015-10-28 16:57:47 UTC
*** Bug 64341 has been marked as a duplicate of this bug. ***
Comment 14 QA Administrators 2018-08-18 02:38:57 UTC Comment hidden (obsolete)
Comment 15 Mike Kaganski 2019-01-15 10:06:13 UTC
*** Bug 119666 has been marked as a duplicate of this bug. ***
Comment 16 Mike Kaganski 2019-01-15 10:30:22 UTC
https://gerrit.libreoffice.org/66377
Comment 17 Commit Notification 2019-01-15 14:41:42 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/c977473546e450ec122f5d3dbc4578d8994962ef%5E%21

tdf#38328: allow Find&Replace key combinations in FindTextFieldControl

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.