tdf#38328: allow Find&Replace key combinations in FindTextFieldControl

... using svt::AcceleratorExecute to detect user-configurable key
combinations.

Change-Id: Iad4f6d3e0becfb896d4b4342c819c98e04789a1c
Reviewed-on: https://gerrit.libreoffice.org/66377
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>